--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,14 @@ img {
     font-weight: 300;
 }
 
+.about-heading {
+    font-family: "Oswald", sans-serif;
+    font-weight: 200;
+    letter-spacing: 0.1em;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    color: #212121;
+}
 
 /*--------------------------------------------Heading*/
 
@@ -99,7 +107,30 @@ img {
     width: 100%;
     text-align: center;
 }
+/*--------------------------------------------About Us Section*/
 
+.aboutus-section {
+    background-color: #fff;
+    text-align: center;
+    max-width: 80%;
+    margin: 0 auto;
+}
+
+.about-us-text {
+    font-family: "Proxima Nova", sans-serif;
+    font-weight: 300;
+    letter-spacing: 0.1em;
+    color: rgb(71, 71, 71);
+    margin-top: 25px;
+    margin-bottom: 50px;
+}
+
+.fa-cogs,
+.fa-question-circle {
+    font-size: 50px;
+    Margin-top: 20px;
+    color: #e0443c
+}
 /*--------------------------------------------Footer*/
 
 footer {
@@ -180,6 +211,13 @@ footer {
     .navbar-toggler i {
         font-size: 25px;
     }
+
+    .fa-cogs,
+    .fa-question-circle {
+        font-size: 42px;
+        Margin-top: 15px;
+    }
+
     .fa-chevron-circle-down {
         font-size: 42px;
     }
@@ -201,7 +239,15 @@ footer {
     .navbar-toggler i {
         font-size: 17px;
     }
+    .fa-cogs,
+    .fa-question-circle {
+        font-size: 35px;
+        Margin-top: 15px;
+    }
     .fa-chevron-circle-down {
         font-size: 35px;
+    }
+    .about-heading {
+        font-size: 25px;
     }
 }
