--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,11 +14,11 @@
     text-align: center;
 }
 
-img {
+/*img {
     max-width: 80%;
     height: auto;
     text-align: center;
-}
+}*/
 
 .about-heading,
 .results-heading,
