--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,11 +13,11 @@
 .text-center {
     text-align: center;
 }
-/*?*img {
+img {
     max-width: 80%;
     height: auto;
     text-align: center;
-}*/
+}
 
 .about-heading,
 .results-heading,
@@ -103,7 +103,6 @@
     display: flex;
     justify-content: center;
     transition: ease-in-out 1s;
-    max-width: 80%
 }
 
 .tagline {
