--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,7 +200,18 @@ img {
     background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
+    display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;    /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flex;  /* TWEENER - IE 10 */
+    display: -webkit-flex; /* NEW - Chrome */
+    display: flex;         /* NEW, Spec - Opera 12.1, Firefox 20+ */
+    justify-content: center;
+    -webkit-box-align: center;
+    -webkit-flex-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
 }
+
 
 .contact-heading {
     font-family: "Oswald", sans-serif;
