--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,9 +198,11 @@ img {
     height: 100%;
     background-attachment: fixed;
     background-repeat:no-repeat;
-    background-size:contain;
     background-position:center;
     background-size: cover;
+    -webkit-background-size:cover;
+    -moz-background-size:cover;
+    -o-background-size:cover;
 }
 
 
