contact img mobile update

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -448,4 +448,9 @@ footer {
     .about-heading {
         font-size: 25px;
     }
+
+    .contact-section {
+        background-attachment: initial;
+    }
 }
+
